# esp32-bme688

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  hello_world_main.c  main.c  main.cpp
main/bme688_control/: bme688_control.cpp  bme688_control.h
main/bsec2_control/: basic.ino  bsec2_control.cpp  bsec2_control.h
